--- a/templates/stock_price_performance.html
+++ b/templates/stock_price_performance.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Price Performance</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="icon" href="/static/images/assetanalysis.ico" type="image/x-icon">
     <style>
         body {
             display: flex;
@@ -37,6 +38,7 @@
             width: 100%;
             max-width: 1000px;
             box-sizing: border-box;
+            margin-bottom: 20px;
         }
         form {
             display: flex;
@@ -44,33 +46,62 @@
             align-items: center;
             gap: 10px;
             width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
         }
         label, input, button {
             width: 100%;
-            max-width: 500px;
-        }
-        input, button {
             padding: 10px;
             border-radius: 4px;
             border: none;
-            margin-top: 5px;
+            margin-bottom: 15px;
         }
         button {
-            padding: 10px;
+            margin-top: 20px;
             background-color: #4CAF50;
             color: white;
-            border: none;
-            border-radius: 4px;
             cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
         }
         button:hover {
             background-color: #45a049;
+            transform: scale(1.05);
+        }
+        #stock_graph {
+            width: 100%;
+            max-width: 1000px;
+            height: 800px;
+            display: none; /* Hide the graph div initially */
+            margin-bottom: 20px; /* Add some space below the graph */
         }
         .footer {
             margin-top: 20px;
             font-size: 0.8em;
             color: #fff;
         }
+        #backButton {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        #backButton:hover {
+            background-color: #45a049;
+            transform: scale(1.05);
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
         @media (max-width: 600px) {
             h1 {
                 font-size: 2em;
@@ -105,12 +136,8 @@
                             alert(response.error);
                         } else {
                             const graph = JSON.parse(response.graph);
-                            const contentDiv = document.querySelector('.content');
-                            const stockGraphDiv = document.createElement('div');
-                            stockGraphDiv.id = 'stock_graph';
-                            stockGraphDiv.style.width = '100%';
-                            stockGraphDiv.style.height = '800px';
-                            contentDiv.appendChild(stockGraphDiv);
+                            const stockGraphDiv = document.getElementById('stock_graph');
+                            stockGraphDiv.style.display = 'block';
                             Plotly.newPlot('stock_graph', graph.data, graph.layout, {responsive: true});
                         }
                     },
@@ -136,7 +163,8 @@
             <button type="submit">Generate Graph</button>
         </form>
     </div>
-    <button onclick="window.location.href='/'">Back to Home</button>
+    <div id="stock_graph"></div>
+    <button id="backButton" onclick="window.location.href='/'">Back to Home</button>
     <div class="footer">
         Stock Tracker © 2024
     </div>
