--- a/templates/stock_price_performance.html
+++ b/templates/stock_price_performance.html
@@ -6,7 +6,10 @@
     <title>Stock Price Performance</title>
     <link rel="stylesheet" href="/static/style.css">
     <link rel="icon" href="/static/images/assetanalysis.ico" type="image/x-icon">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
         body {
             display: flex;
             flex-direction: column;
@@ -14,72 +17,79 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #72EDF2 10%, #5151E5 100%);
+            font-family: 'Roboto', Arial, sans-serif;
+            background: linear-gradient(135deg, #72EDF2, #5151E5);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 20px;
             box-sizing: border-box;
         }
+
         h1 {
-            margin-top: 100px; /* Adjust this to accommodate the fixed header */
+            margin-top: 60px;
             margin-bottom: 40px;
-            font-size: 2.5em;
+            font-size: 3em;
             color: black;
         }
-        .content {
+
+        form {
             display: flex;
             flex-direction: column;
             align-items: center;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 1000px;
-            box-sizing: border-box;
-            margin-bottom: 20px;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 10px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
             width: 100%;
             max-width: 800px;
-            margin: 0 auto;
+            box-sizing: border-box;
         }
+
         label, input, button {
+            margin: 10px 0;
             width: 100%;
             padding: 10px;
-            border-radius: 4px;
+            border-radius: 5px;
             border: none;
-            margin-bottom: 15px;
+            font-size: 1em;
         }
+
+        input {
+            background-color: white;
+            color: black;
+        }
+
         button {
-            margin-top: 20px;
+            padding: 10px;
             background-color: #4CAF50;
             color: white;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
         }
+
         button:hover {
-            background-color: #45a049;
             transform: scale(1.05);
         }
+
         #stock_graph {
-            width: 100%;
-            max-width: 1000px;
-            height: 800px;
-            display: none; /* Hide the graph div initially */
-            margin-bottom: 20px; /* Add some space below the graph */
-        }
-        .footer {
             margin-top: 20px;
+            width: 100%;  /* Set width to 100% to take up the full page width */
+            height: 800px;
+            display: none;
+        }
+
+        .footer {
+            margin: 20px;
             font-size: 0.8em;
             color: #fff;
         }
+
         #backButton {
+            margin-top: 20px;
             padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
@@ -93,13 +103,11 @@
             background-color: #45a049;
             transform: scale(1.05);
         }
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         @media (max-width: 600px) {
@@ -113,6 +121,9 @@
             }
             button {
                 padding: 8px;
+            }
+            #stock_graph {
+                height: 400px;
             }
         }
     </style>
@@ -152,17 +163,15 @@
 <body>
     {% include 'header.html' %}
     <h1>Stock Price Performance</h1>
-    <div class="content">
-        <form>
-            <label for="tickers">Enter Stock Tickers (comma-separated):</label>
-            <input type="text" id="tickers" name="tickers" placeholder="e.g. AAPL, MSFT, GOOGL" required>
+    <form>
+        <label for="tickers">Enter Stock Tickers (comma-separated):</label>
+        <input type="text" id="tickers" name="tickers" placeholder="e.g. AAPL, MSFT, GOOGL" required>
 
-            <label for="start_date">Select Start Date:</label>
-            <input type="date" id="start_date" name="start_date" required>
+        <label for="start_date">Select Start Date:</label>
+        <input type="date" id="start_date" name="start_date" required>
 
-            <button type="submit">Generate Graph</button>
-        </form>
-    </div>
+        <button type="submit">Generate Graph</button>
+    </form>
     <div id="stock_graph"></div>
     <button id="backButton" onclick="window.location.href='/'">Back to Home</button>
     <div class="footer">
